--- a/pyWS2.ipynb
+++ b/pyWS2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "pyWS2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNGkxd4QNRzEwkl/lQoOOco",
+      "authorship_tag": "ABX9TyPV/IUbyCu/6Tb9f+15LwvZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -870,6 +870,473 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XZgFaQHaA2ox",
+        "outputId": "01ca178b-bf74-41d6-d31a-100ac1db08d5"
+      },
+      "source": [
+        "for x in range(1,21):\r\n",
+        " print(x)"
+      ],
+      "execution_count": 162,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n",
+            "20\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 135
+        },
+        "id": "UJSt2ZUlBTYx",
+        "outputId": "9618eb0c-1ad3-4709-d3f6-105e0506e1d8"
+      },
+      "source": [
+        "lst=[i for i in range{1,11}]\r\n",
+        "  print(lst)"
+      ],
+      "execution_count": 175,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-175-565e214147a6>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    lst=[i for i in range{1,11}]\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LIvnUpXHDZxq",
+        "outputId": "513fe093-3b73-439c-ac06-642eab5edf9b"
+      },
+      "source": [
+        "for x in range(0,10,2):\r\n",
+        " print(x)"
+      ],
+      "execution_count": 179,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "19TTiUXYEN1J",
+        "outputId": "79acbcf3-b046-44b6-9797-4bb1357075d4"
+      },
+      "source": [
+        "evenlist=[i for i in range(1,21) if i%2==0]\r\n",
+        "print(evenlist)"
+      ],
+      "execution_count": 180,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HSQwJ53mE5j7",
+        "outputId": "7e460a8f-bff9-4ab9-9042-3065c3e8f741"
+      },
+      "source": [
+        "oddlist=[i*i for i in range(1,21) if i%2==1]\r\n",
+        "print(oddlist)"
+      ],
+      "execution_count": 182,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 9, 25, 49, 81, 121, 169, 225, 289, 361]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IMYgElQlFTiZ",
+        "outputId": "6d2f4270-aad4-4589-bf5d-f57e59196974"
+      },
+      "source": [
+        "if 0:\r\n",
+        "  (print(\"pawan\"))\r\n",
+        "else:\r\n",
+        "  print(\"acharya\")"
+      ],
+      "execution_count": 189,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "acharya\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "84oED4GoFwjj",
+        "outputId": "51dda13e-40a0-457e-b107-9b1f81f85fe2"
+      },
+      "source": [
+        "if -1:\r\n",
+        "  (print(\"pawan\"))\r\n",
+        "else:\r\n",
+        "  print(\"acharya\")"
+      ],
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "pawan\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bqb1Pe8iGgrx",
+        "outputId": "9b2b8a7e-9b3a-4f4c-9050-91ae38a6a593"
+      },
+      "source": [
+        "a=[1,1,2,4,5]\r\n",
+        "print(all(a))"
+      ],
+      "execution_count": 191,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hg2bXqWnG6Tp",
+        "outputId": "a5ccd70f-3e02-4b25-f922-543cc2ac1dbc"
+      },
+      "source": [
+        "a=[1,1,2,4,0]\r\n",
+        "print(all(a))"
+      ],
+      "execution_count": 192,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zx_v6B7xHPsq",
+        "outputId": "3e37a875-34db-48a6-e742-679b3f196d63"
+      },
+      "source": [
+        "primelists=[i for i in range(2,21) if all(i%j!=0 for j in range(2,i))]\r\n",
+        "print(primelists)"
+      ],
+      "execution_count": 209,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 3, 5, 7, 11, 13, 17, 19]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VXrQwPocMzBM",
+        "outputId": "1b26a812-d022-43bf-eb2e-64eea3744f39"
+      },
+      "source": [
+        "print(all([8%j!=0 for j in range(2,8)]))"
+      ],
+      "execution_count": 217,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TYD3Z0ClObTh",
+        "outputId": "97aff866-d27b-4d77-f61e-5f681df478b7"
+      },
+      "source": [
+        "lst=[(i*i) for i in range(1,26) if i*i<=26]\r\n",
+        "print(lst)"
+      ],
+      "execution_count": 223,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 4, 9, 16, 25]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DTGTrYd8VHKr"
+      },
+      "source": [
+        "#functions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n07ZgihwVJJi"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HfuidcjPX4zK",
+        "outputId": "fee35527-e93f-47a0-9463-d54d4e4dc0ac"
+      },
+      "source": [
+        "def my_function(a,b,c=3):\r\n",
+        " print(a,b,c)\r\n",
+        "my_function(\"jack\",\"jill\")"
+      ],
+      "execution_count": 232,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "jack jill 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5O0zcONAc2pE"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ybec9c6FcqSj",
+        "outputId": "2275c88a-bdf0-4af3-988e-5eaf64c5c60f"
+      },
+      "source": [
+        "lists=[\"pawan\",\"shreays\",\"rakshith\"]\r\n",
+        "print(lists)\r\n"
+      ],
+      "execution_count": 234,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['pawan', 'shreays', 'rakshith']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jssO-sR5dGlq",
+        "outputId": "d3737dd0-7a1d-4e60-eae2-b06c2eedb9ea"
+      },
+      "source": [
+        "x=int(input())\r\n",
+        "print(x)"
+      ],
+      "execution_count": 236,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YsfGwdIadQGb",
+        "outputId": "787a25e5-ac62-4910-9a19-980b6c9e1e9d"
+      },
+      "source": [
+        "x=int(input())\r\n",
+        "y=int(input())\r\n",
+        "print(\"pawan \")\r\n",
+        "print(str(x+y))"
+      ],
+      "execution_count": 245,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "6\n",
+            "pawan \n",
+            "11\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "51wxgnLJe9yD"
+      },
+      "source": [
+        "def marks1(name):\r\n",
+        "  phy=int(input(\"Enter \" + name +\"physics marks\"))\r\n",
+        "  chem=int(input(\"Enter \" + name +\"chemistry marks\"))\r\n",
+        "  return phy + chem\r\n",
+        "  st=[\"jack\",\"jill\",\"abhi\",\"rohan\"]\r\n",
+        "  for i in st:\r\n",
+        "    print(marks(i))"
+      ],
+      "execution_count": 254,
+      "outputs": []
     }
   ]
 }
